--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -21,26 +21,34 @@ compile.on.save.unsupported.javafx=true
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/AirBook.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.42-bin.jar=lib\\mysql-connector-java-5.1.42-bin.jar
+file.reference.mysql-connector-java-5.1.48-bin.jar=C:\\Program Files (x86)\\MySQL\\Connector J 5.1\\mysql-connector-java-5.1.48-bin.jar
+file.reference.mysql-connector-java-5.1.48.jar=C:\\Program Files (x86)\\MySQL\\Connector J 5.1\\mysql-connector-java-5.1.48.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-5.1.42-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.48.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=false
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -48,11 +56,14 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -100,6 +111,8 @@ javafx.run.width=800
 javafx.signing.blob=false
 javafx.signing.enabled=false
 javafx.signing.type=notsigned
+jlink.launcher=false
+jlink.launcher.name=AirBook
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
@@ -117,9 +130,13 @@ run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
