--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,16 +33,16 @@ dist.jar=${dist.dir}/AirBook.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.48-bin.jar-1=D:\\andres\\Universidad-Nacional-2020-I\\Ingenier\u00eda de Software\\AirBook_Code\\mysql-connector-java-5.1.48-bin.jar
-file.reference.mysql-connector-java-5.1.48.jar-1=D:\\andres\\Universidad-Nacional-2020-I\\Ingenier\u00eda de Software\\AirBook_Code\\mysql-connector-java-5.1.48.jar
+file.reference.mysql-connector-java-5.1.48-bin.jar=C:\\Program Files (x86)\\MySQL\\Connector J 5.1\\mysql-connector-java-5.1.48-bin.jar
+file.reference.mysql-connector-java-5.1.48.jar=C:\\Program Files (x86)\\MySQL\\Connector J 5.1\\mysql-connector-java-5.1.48.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-5.1.48-bin.jar-1}:\
-    ${file.reference.mysql-connector-java-5.1.48.jar-1}
+    ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.48.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
