Impresion busqueda libros GUI

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,16 +33,16 @@ dist.jar=${dist.dir}/AirBook.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.48-bin.jar=C:\\Program Files (x86)\\MySQL\\Connector J 5.1\\mysql-connector-java-5.1.48-bin.jar
-file.reference.mysql-connector-java-5.1.48.jar=C:\\Program Files (x86)\\MySQL\\Connector J 5.1\\mysql-connector-java-5.1.48.jar
+file.reference.mysql-connector-java-5.1.42-bin.jar=lib/mysql-connector-java-5.1.42-bin.jar
+file.reference.mysql-connector-java-5.1.48-bin.jar=lib/mysql-connector-java-5.1.48-bin.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.48.jar}
+    ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.48-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -116,7 +116,7 @@ jlink.launcher.name=AirBook
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0+ projects
 jnlp.enabled=false
 # Main class for Java launcher
-main.class=com.javafx.main.Main
+main.class=logic.AirBook
 # For improved security specify narrower Codebase manifest attribute to prevent RIAs from being repurposed
 manifest.custom.codebase=*
 # Specify Permissions manifest attribute to override default (choices: sandbox, all-permissions)
