--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.48-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
+    ${libs.hamcrest.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +56,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_5.classpath}:\
+    ${libs.junit_4.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
