--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,17 +33,15 @@ dist.jar=${dist.dir}/AirBook.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.42-bin.jar=lib/mysql-connector-java-5.1.42-bin.jar
-file.reference.mysql-connector-java-5.1.48-bin.jar=lib/mysql-connector-java-5.1.48-bin.jar
+file.reference.mysql-connector-java-8.0.20.jar=lib/mysql-connector-java-8.0.20.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-java-5.1.42-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
-    ${libs.hamcrest.classpath}
+    ${libs.hamcrest.classpath}:\
+    ${file.reference.mysql-connector-java-8.0.20.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
